Add home questions list
